# rd_downloader_rust

./: .directory  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
src/: api.rs  download.rs  main.rs  prefs.rs
