[package]
name = "rd_downloader"
description = "Simple Bulk Downloader for the Rhythm Doctor custom levels site. "
version = "0.1.0"
edition = "2021"
repository = "https://github.com/huantianad/rd-downloader"
readme = "README.md"
license = "MIT"
keywords = [ "rhythm doctor", "games", "network", "download" ]
categories = [ "games" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.141", features = ["derive"] }
tap = "1.0.1"
eyre = "0.6.8"
color-eyre = "0.6.2"
dialoguer = "0.10.2"
indicatif = "0.17.0"
console = "0.15.1"
hyperx = "1.4.0"
futures = "0.3.21"
once_cell = "1.13.0"
